# simple-ci-cache

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: main.yml  pr.yml
examples/simple/: cache.yml
examples/simple/lib/: readme.md
examples/simple/main/: readme.md
src/: cli.rs  env_config.rs  lib.rs  main.rs  standard_out.rs
src/cache/: command.rs  file.rs  folder.rs  glob.rs  mod.rs
src/config/: mod.rs  parse.rs  project.rs  types.rs
src/error/: mod.rs
