[package]
name = "simple-ci-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
async-compression = { version = "0.4.34", features = [
    "xz",
    "xz-parallel",
    "tokio",
    "brotli",
] }
async-tempfile = "0.7.0"
blake3 = { version = "1.8.2", features = ["mmap", "rayon", "serde"] }
bytes = { version = "1.11.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
file_type = { version = "0.8.10", features = ["all"] }
glob = "0.3.3"
itertools = "0.14.0"
nonempty = "0.12.0"
num_cpus = "1.17.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
smol_str = { version = "0.3.4", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.43", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["chrono", "serde"] }
